# kerkoapp

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE.txt  Makefile  README.md  babel.cfg  dotenv.sample  kerkoapp.py  main.py  prestart.sh  pyproject.toml  sample.config.toml  sample.env  sample.instance.toml  sample.secrets.toml  tox.ini  wsgi.py
app/: __init__.py  config.py  extensions.py  logging.py
app/templates/kerkoapp/: 400.html.jinja2  403.html.jinja2  404.html.jinja2  500.html.jinja2
app/translations/fr/LC_MESSAGES/: messages.po
app/translations/pt/LC_MESSAGES/: messages.po
kerkoapp/: __init__.py  config.py  config_helpers.py  extensions.py  logging.py  sample.config.toml
kerkoapp/templates/kerkoapp/: 400.html.jinja2  403.html.jinja2  404.html.jinja2  500.html.jinja2  503.html.jinja2
kerkoapp/translations/de/LC_MESSAGES/: messages.po
kerkoapp/translations/es/LC_MESSAGES/: messages.po
kerkoapp/translations/fr/LC_MESSAGES/: messages.po
kerkoapp/translations/pt/LC_MESSAGES/: messages.po
requirements/: base.in  base.txt  dev.in  dev.txt  docker.in  docker.txt  run.in  run.txt  serve.txt
