[project]
name = "KerkoApp"
description = "A web application that provides a faceted search interface for bibliographies based on Zotero."
authors = [
    {name = "David Lesieur", email="kerko@whiskyechobravo.com"},
]
license = "BSD-3-Clause"
requires-python = ">= 3.11"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "W",    # pycodestyle
    "E",    # pycodestyle
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "BLE",  # flake8-blind-except
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "EXE",  # flake8-executable
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "SLOT", # flake8-slots
    "TID",  # flake8-tidy-imports
    "TC",   # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PGH",  # pygrep-hooks
    "PL",   # Pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "PERF", # Perflint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "D100",    # Missing docstring in public module.
    "D101",    # Missing docstring in public class.
    "D102",    # Missing docstring in public method.
    "D103",    # Missing docstring in public function.
    "D105",    # Missing docstring in magic method.
    "D106",    # Missing docstring in public nested class.
    "D107",    # Missing docstring in __init__.
    "D200",    # One-line docstring should fit on one line.
    "D202",    # No blank lines allowed after function docstring.
    "D203",    # 1 blank line required before class docstring.
    "D205",    # 1 blank line required between summary line and description.
    "D212",    # Multi-line docstring summary should start at the first line.
    "D213",    # Multi-line docstring summary should start at the second line.
    "COM812",  # Missing trailing comma.
    "PLR0912", # Too many branches.
    "PLR0913", # Too many arguments in function definition.
    "PLR0915", # Too many statements.
]
